# iq-config-as-code

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  iq-apply-conf.py  iq-healthcheck.py  iq-scrape-conf.py  pyproject.toml
.circleci/: config.yml
.github/workflows/: container-build.yml
conf/: All-Organizations-Template-Conf.json  empty_configuration.json  example-org-conf.json  orgs_apps.json  root-org-conf.json  system-conf.json  unit-application_categories.json  unit-automated_applications.json  unit-automated_source_control.json  unit-component_labels.json  unit-continuous_monitoring.json  unit-custom_roles.json  unit-data_purging.json  unit-email_server.json  unit-grandfathering.json  unit-ldap_connections.json  unit-license_threat_groups.json  unit-local_users.json  unit-proprietary_components.json  unit-proxy.json  unit-source_control.json  unit-success_metrics.json  unit-success_metrics_reports.json  unit-system_notice.json  unit-webhooks.json
healthcheck/: Advisories.json  All-Organizations-Healthcheck.json  Root Organization-Healthcheck.json  System-Healthcheck.json  Team Alpha-Healthcheck.json  The A Team-Healthcheck.json  The One Team-Healthcheck.json
healthcheck/templates/: App-Proprietary-Components-Template.json  App-RBAC-Template.json  Org-Proprietary-Components-Template.json  Org-RBAC-Template.json  Policy-Notifications-Example.json
iq-config-as-code/: iq-healthcheck.py  iq-scrape-conf.py
nexus_iq_casc/: __init__.py  client.py  iq-apply-conf.py
nexus_iq_casc/command/: __init__.py  apply.py  healthcheck.py  scrape.py
onboarding/templates/: dev-team-onboarding-template.json  sonatype-recommended-best-practice.json  sonatype-recommended-root-configuration.json  sonatype-recommended-system-config.json
scrape/: All-Organizations-Conf.json  Example-Org-config.json  Root Organization-config.json  System-Config.json  Team Alpha-config.json  The A Team-config.json  The One Team-config.json
