[tool.poetry]
name = "iq-config-as-code"
version = "0.3.0"
description = "Provides the capability to automate the configuration of the Sonatype Nexus IQ Server"
authors = ["Sonatype Community <community-group@sonatype.com>"]
maintainers = ["Sonatype Community <community-group@sonatype.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/sonatype-nexus-community/iq-config-as-code"
repository = "https://github.com/sonatype-nexus-community/iq-config-as-code"
packages = [
    { include = "iq-config-as-code" }
]
include = [
    "LICENSE"
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Legal Industry',
    'Intended Audience :: System Administrators',
    'Topic :: Security',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
keywords = [
    "Sonatype", "Nexus", "IQ", "Lifecycle", "CasC", "Configuration"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sonatype-nexus-community/iq-config-as-code/issues"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = { version = ">= 3.4", python = "< 3.8" }
requests = { version = ">= 2.20.0" }
nexus-iq = {path = "../../madpah/nexus-iq-lib/dist/nexus_iq-0.0.1-py3-none-any.whl"}
nexus-iq-internal = {path = "../../madpah/nexus-iq-internal-lib/dist/nexus_iq_internal-0.0.1-py3-none-any.whl"}

[tool.poetry.scripts]
nexus-iq-casc = 'nexus_iq_casc.client:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"